--- a/src/assets/style/reset.scss
+++ b/src/assets/style/reset.scss
@@ -1,26 +1,27 @@
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+	user-select: none;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 
 ul, ol {
-  list-style: none;
+	list-style: none;
 }
 
 button, input {
-  font: inherit;
+	font: inherit;
 }
 
 :focus {
-  outline: none;
+	outline: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
+	font-weight: normal;
 }
